<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.diego.practica1.Pregunta1"
    android:focusableInTouchMode="true"
    android:focusable="false">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/Usuariop1"
        android:background="@drawable/usuario"
        android:baselineAlignBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtnomusuario"
        android:layout_below="@+id/Usuariop1"
        android:layout_alignStart="@+id/Usuariop1"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/paso1"
        android:id="@+id/Paso1"
        android:layout_above="@+id/Barraprogreso1"
        android:layout_alignParentStart="false"
        android:textSize="22dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/Barraprogreso1"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:layout_below="@+id/txtnomusuario"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pregunta1"
        android:id="@+id/txtpregunta2"
        android:layout_below="@+id/Barraprogreso1"
        android:layout_alignParentStart="true" />

    <!-- Creamos un radiogroup donde meteremos los 3 radiobuttons
    para que de esta forma no podamos seleccionar mas de un radiobutton,
    si crearamos fuera del radiogroup los radiobutton podriamos
    seleccionar mas de uno. -->

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/grupo1"
        android:layout_below="@+id/txtpregunta2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta1a"
            android:id="@+id/radio1a"
            android:layout_below="@+id/Barraprogreso1"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta1b"
            android:id="@+id/radio1b"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta1c"
            android:id="@+id/radio1c"
            android:checked="false" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siguiente1"
        android:id="@+id/Siguiente1"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/Barraprogreso1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp" />

</RelativeLayout>
