<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.diego.practica1.Pregunta10"
    android:focusableInTouchMode="true"
    android:focusable="false"
    android:id="@+id/layout10">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/Usuariop1"
        android:background="@drawable/usuario"
        android:baselineAlignBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtnomusuario"
        android:layout_below="@+id/Usuariop1"
        android:layout_alignStart="@+id/Usuariop1"
        android:textSize="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/paso10"
        android:id="@+id/Paso10"
        android:layout_above="@+id/Barraprogreso1"
        android:layout_alignParentStart="false"
        android:textSize="22dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/Barraprogreso1"
        android:indeterminate="false"
        android:max="100"
        android:progress="0"
        android:layout_below="@+id/txtnomusuario"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pregunta10"
        android:id="@+id/txtpregunta10"
        android:layout_below="@+id/Barraprogreso1"
        android:layout_alignParentStart="true" />


    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/siguiente1"
        android:id="@+id/Siguiente1"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/Barraprogreso1"
        android:layout_marginRight="20dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/anterior"
        android:id="@+id/Anterior"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FechaPregunta10"
        android:layout_below="@+id/txtpregunta10"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp" />

</RelativeLayout>
