<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.diego.practica1.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Bienvenida"
            android:id="@+id/txtbienvenida"
            android:textSize="22dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:id="@+id/imgusuario"
            android:background="@drawable/usuario"
            android:layout_weight="1"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:baselineAlignBottom="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Nombre"
            android:id="@+id/Intrnombre"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/txtnombre" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/Comenzar"
            android:id="@+id/comenzar"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true" />

    </LinearLayout>

</RelativeLayout>
